fixing divs being overlapping

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,12 +10,11 @@ body {
 	background-color: #08121d;
 	font-family: 'Source Sans Pro',arial,sans-serif;
 	float: left;
-	height: 80%;
-	width: 100%;
 	vertical-align: middle;
 	height: 30%;
 	width: 100%;
 	display:block;
+	margin:auto;
 }
 
 #logon {
@@ -48,6 +47,7 @@ h2 {
 	text-shadow: 0 2px #000000;
 	font-family: 'Trebuchet MS', 'Helvetica';
 	display:block;
+	width: 100%;
 }
 
 
